# 8BitBeats

./: Cargo.toml  README.md  \  lc
src/: bass.rs  gen.rs  main.rs  main1.rs  melodies.rs  progs.rs  test.rs  tui.rs
